@@ -32,7 +32,6 @@ namespace FluentValidation.Tests {
 
 		public ValidatorTesterTester() {
 			validator = new TestValidator();
-			validator.RuleFor(x => x.CreditCard).Must(creditCard => !string.IsNullOrEmpty(creditCard)).WhenAsync((x, cancel) => Task.Run(() => { return x.Age >= 18; }));
 			validator.RuleFor(x => x.Forename).NotNull();
 			validator.RuleForEach(person => person.NickNames).MinimumLength(5);
 			CultureScope.SetDefaultCulture();
@@ -551,13 +550,22 @@ namespace FluentValidation.Tests {
 		[Theory]
 		[InlineData(42, null)]
 		[InlineData(42, "")]
-		public void ShouldHaveValidationError_should_not_throw_when_there_are_validation_errors__WhenAsyn_is_used(int age, string cardNumber) {
+		public async Task ShouldHaveValidationError_should_not_throw_when_there_are_validation_errors__WhenAsyn_is_used(int age, string cardNumber) {
 			Person testPerson = new Person() {
 				CreditCard = cardNumber,
 				Age = age
 			};
 
-			validator.ShouldHaveValidationErrorFor(x => x.CreditCard, testPerson);
+			validator.RuleFor(x => x.CreditCard)
+				.Must(creditCard => !string.IsNullOrEmpty(creditCard))
+				.WhenAsync((x, cancel) => Task.FromResult(x.Age >= 18));
+
+			// Throws when called sync.
+			Assert.Throws<AsyncValidatorInvokedSynchronouslyException>(() =>
+				validator.ShouldHaveValidationErrorFor(x => x.CreditCard, testPerson));
+
+			// Executes normally when called async
+			await validator.ShouldHaveValidationErrorForAsync(x => x.CreditCard, testPerson);
 		}
 
 		[Theory]
@@ -591,13 +599,21 @@ namespace FluentValidation.Tests {
 		[Theory]
 		[InlineData(42, null)]
 		[InlineData(42, "")]
-		public void ShouldNotHaveValidationError_should_throw_when_there_are_validation_errors__WhenAsyn_is_used(int age, string cardNumber) {
+		public async Task ShouldNotHaveValidationError_should_throw_when_there_are_validation_errors__WhenAsyn_is_used(int age, string cardNumber) {
 			Person testPerson = new Person() {
 				CreditCard = cardNumber,
 				Age = age
 			};
 
-			Assert.Throws<ValidationTestException>(() => validator.ShouldNotHaveValidationErrorFor(x => x.CreditCard, testPerson));
+			validator.RuleFor(x => x.CreditCard)
+				.Must(creditCard => !string.IsNullOrEmpty(creditCard))
+				.WhenAsync((x, cancel) => Task.FromResult(x.Age >= 18));
+
+			// Throws async exception when invoked synchronously
+			Assert.Throws<AsyncValidatorInvokedSynchronouslyException>(() => validator.ShouldNotHaveValidationErrorFor(x => x.CreditCard, testPerson));
+
+			// Executes normally when run async.
+			await Assert.ThrowsAsync<ValidationTestException>(async () => await validator.ShouldNotHaveValidationErrorForAsync(x => x.CreditCard, testPerson));
 		}
 
 		[Fact]
